* automatical switch to data tab when there is no map-visible data * bugfix for dataview with overlapping map controls

--- a/default.css
+++ b/default.css
@@ -32,7 +32,7 @@ body {
   height:100%;
   position:absolute;
   top:0;
-  z-index:-99;
+  z-index:-9999;
 }
 
 .CodeMirror {
